tests/parser/tests/cases/should_fail/spread_pattern_in_struct_pattern/case.hash
// Spread patterns are disallowed within struct patterns
Struct( x,  ...d) := foo();
